tests/file_test/testdata/unicode_escape_value_overflows.llang
let s = "abc\u{ffffffffff}def";
